--- a/inkscapePytania/index.html
+++ b/inkscapePytania/index.html
@@ -23,6 +23,32 @@
                 </p>
               </details>
             </ol>
+            <h3 class="question_title">Pierwszym krokiem podczas przetwarzania sygnału analogowego na cyfrowy jest</h3>
+            <ol type="a" class="question_answerList">
+              <li class="question_answerItem">filtrowanie</li>
+              <li class="question_answerItem">próbkowanie</li>
+              <li class="question_answerItem">kwantyzacja</li>
+              <li class="question_answerItem">kodowanie</li>
+              <details class="question_details">
+                <summary class="question_detailsSummary">sprawdź odpowiedź</summary> 
+                <p class="question_detailsRightAnswer"> odpowiedz: 
+                  <span>B</span> 
+                </p>
+              </details>
+            </ol>
+          <h3 class="question_title">Jak nazywa się technika umożliwiająca otwarcie połączenia klienta z serwerem i komunikację bez przeładowywania całej strony WWW w sposób asynchroniczny?</h3>
+            <ol type="a" class="question_answerList">
+              <li class="question_answerItem">AJAX</li>
+              <li class="question_answerItem">XML</li>
+              <li class="question_answerItem">PHP</li>
+              <li class="question_answerItem">VBScript</li>
+              <details class="question_details">
+                <summary class="question_detailsSummary">sprawdź odpowiedź</summary> 
+                <p class="question_detailsRightAnswer"> odpowiedz: 
+                  <span>A</span> 
+                </p>
+              </details>
+            </ol>
           </article>
     </div>
     <div class="prawa">
